css/orden.css
::-webkit-scrollbar {
	display: none;
}

#app {
	width: 100%;
	height: 96.2vh;
	margin: 0 auto;
}

#info {
	width: 100%;
	height: 5%;
	color: white;
	justify-content: center;
	align-content: center;
}

#info ul li {
	display: inline-flex;
	margin: 0 80px;
}



#main {
	width: 100%;
	height: 95%;
}

.upper-info {
	background-color: #272727;
}

.cont-izq {
	/*background-color:blue;*/
	color: #fefefe;
	background-color: crimson;
	width: 15%;
	height: 100%;

}

.cont-cen {
	background-color: #C8CEC4;
	width: 45%;
	height: 100%;
}

.cont-der {
	/*background-color:blue;*/
	background-color: #E0E2E5;
	width: 40%;
	height: 100%;
}

.title {
	text-align: center;
	position: -webkit-sticky;
	position: sticky;
	top: 0;
	height: 5%;
	margin-bottom: 30px;
}

#categories,
#dishes,
#cart {
	overflow: scroll;
	scrollbar-width: none;
	/* Firefox */
	-ms-overflow-style: none;
	/* IE 10+ */
}

#categories .title {
	background-color: crimson;
	z-index: 999;
	justify-content: center;
	align-content: center;
}

#dishes .title {
	background-color: #C8CEC4;
	z-index: 999;
	justify-content: center;
	align-content: center;
	margin-bottom: 20px;
}

#cart .title {
	background-color: #E0E2E5;
	z-index: 999;
	justify-content: center;
	align-content: center;
}


.cat-list {
	width: 60%;
	color: black;
	justify-content: center;
	align-items: center;
	margin: 20px 0;
}

.cat-item {
	width: 100%;
	text-align: center;
	margin: 20px 0;
	border-radius: 15px;
}

.cat-item h4 {
	margin: 10px;
}

.cat-item img {
	display: block;
	margin: auto;
	max-width: 50%;
	margin-top: 15px;
}


/* Estilos del ícono de mouse */
.mouse {
	display: block;
	width: 28px;
	height: 48px;
	border-radius: 11px 11px 15px 15px;
	border: 1px solid #fff;
	position: absolute;
	z-index: 9999;
	top: 94%;
	left: 13%;
}

.mouse span {
	display: block;
	margin: 6px auto;
	width: 2px;
	height: 5px;
	border-radius: 4px;
	background: #fff;
	border: 1px solid transparent;
	-webkit-animation-duration: 1s;
	animation-duration: 1s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
	-webkit-animation-iteration-count: infinite;
	animation-iteration-count: infinite;
	-webkit-animation-name: scroll;
	animation-name: scroll;
}

@keyframes scroll {
	0% {
		opacity: 1;
		-webkit-transform: translateY(0);
		-ms-transform: translateY(0);
		transform: translateY(0);
	}

	100% {
		opacity: 0;
		-webkit-transform: translateY(20px);
		-ms-transform: translateY(20px);
		transform: translateY(20px);
	}
}

.dish-list {
	font-size: 0.85rem;
	justify-content: space-evenly;
}

.dish-item {
	position: relative;
	width: 300px;
	background-color: #EFE8E8A3;
	padding: 15px;
	margin: 10px;
	border-radius: 15px;
}

.dish-item img {
	display: block;
	height: 200px;
	width: 200px;
	margin: 0 auto;
}

.dish-item .body {
	display: flex;
	justify-content: space-between;
	border-top: #5252524f 1px solid;
}

.dish-name,
.dish-price {
	margin-top: 10px;
}

.soles {
	font-size: 0.7rem;
	vertical-align: top;
	color: #525252;
}

.add-cart {
	position: absolute;
	right: 20px;
	font-size: 1.4rem;
	cursor: pointer;
}

input[type=checkbox].checkbox {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	width: 1.6rem;
	height: 1.6rem;
	background: #C0C0C0;
	margin: 5px;
	margin-top: -1px;
	vertical-align: middle;
	cursor: pointer;
	position: relative;
	outline: 0;
	transition: content 0.2s ease-in-out, background 0.2s ease-in-out;
}

input[type=checkbox].checkbox:checked {
	background: #00cc00;
}

input[type=checkbox].checkbox:checked::after {
	content: '\2713';
	left: 50%;
	top: 50%;
	font-size: 0;
	font-weight: bold;
	-webkit-transform: translate(-50%, -50%);
	transform: translate(-50%, -50%);
	text-align: center;
	vertical-align: middle;
	position: absolute;
	-webkit-animation: checkAppear 0.4s ease-in-out forwards;
	animation: checkAppear 0.4s ease-in-out forwards;
}

input[type=checkbox].checkbox::after {
	content: '';
	color: white;
	font-size: 100%;
}

@-webkit-keyframes checkAppear {
	50% {
		font-size: 3.3em;
	}

	100% {
		font-size: 2em;
	}
}

@keyframes checkAppear {
	50% {
		font-size: 2em;
	}

	100% {
		font-size: 1.15em;
	}
}

.active {
	background-color: #2196F3;
}

.hide {
	display: none !important;
}

#cart-box {
	text-align: center;
	justify-content: center;
	/* Se deduce el tamaño del título y su margen hacia abajo, y el margin bottom del mismo */
	height: calc(94% - 40px);
	margin-bottom: 20px;
	width: 100%;
}

#cart-placeholder {
	color: rgba(128, 128, 128, 0.1);
	text-shadow: 1px 1px #9b9b9bb2;
	font-size: 3rem;
}

.cartlist {
	justify-content: start;
	min-width: 90%;
}


table {
	margin: 0;
	border-collapse: collapse;
	overflow: hidden;
}

table tr,
table td {
	padding: 0.2rem 1rem;
}

tr td:last-child {
	width: 4rem;
}


#products td,
#products tr {
	border: 1px solid #808080;
}

#products {
	border-bottom: 3px solid crimson;
	width: 100%;
	line-height: 2.5;
}

#products thead {
	background-color: crimson;
	color: white;
	font-weight: bold;
}

#products tbody tr:nth-child(odd) {
	background-color: rgba(255, 255, 255, 0.7);
}

#totals td {
	border: 1px solid #808080;
}

#totals {
	width: auto;
	margin-right: 0px;
	margin-left: auto;
}

#totals .subtitle {
	text-align: right;
	border: 0;
}

